deleted and created some files

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,10 +8,10 @@
                         <a href="https://hng.tech/" target="_blank"><img src="{% static 'img/hnglogo.png' %}" alt="HNG Logo"  class="img-fluid" /></a>
                     </div>
                     <div class="col">
-                        <a href="https://zuri.team/" target="_blank"><img src="{% static 'img/zurilogo_.png' %}" alt="Zuri Logo"  class="img-fluid" /></a>
+                        <a href="https://zuri.team/" target="_blank"><img src="{% static 'img/zuri_logo.png' %}" alt="Zuri Logo"  class="img-fluid" /></a>
                     </div>
                     <div class="col">
-                        <a href="https://ingressive.org/" target="_blank"><img src="{% static 'img/i4Glogo_.png' %}" alt="Ingressive4Good Logo"  class="img-fluid" /></a>
+                        <a href="https://ingressive.org/" target="_blank"><img src="{% static 'img/i4Glogo.png' %}" alt="Ingressive4Good Logo"  class="img-fluid" /></a>
                     </div>
                 </div>
             </div>           
