--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
                         <a href="https://zuri.team/" target="_blank"><img src="{% static 'img/zuri_logo.png' %}" alt="Zuri Logo"  class="img-fluid" /></a>
                     </div>
                     <div class="col">
-                        <a href="https://ingressive.org/" target="_blank"><img src="{% static 'img/i4Glogo.png' %}" alt="Ingressive4Good Logo"  class="img-fluid" /></a>
+                        <a href="https://ingressive.org/" target="_blank"><img src="{% static 'img/i4glogo.png' %}" alt="Ingressive4Good Logo"  class="img-fluid" /></a>
                     </div>
                 </div>
             </div>           
