--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="fas fa-dot-circle"></i> <strong>Birthday:</strong> 1st April, 1991</li>
+                  <li><i class="fas fa-dot-circle"></i> <strong>Birthday:</strong> 25th August, 1997</li>
                   <li><i class="fas fa-dot-circle"></i> <strong>Sex:</strong> Male</li>
                   <li><i class="fas fa-dot-circle"></i> <strong>Address:</strong> Jos, Plateau State</li>
                   <li><i class="fas fa-dot-circle"></i> <strong>Nationality:</strong> Nigerian</li>                  
