Modified almost all the html files

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
               <div class="email">
                 <i class="fas fa-envelope-open-text"></i>
                 <h4>Email:</h4>
-                <p>incrediblechamp1@gmail.com</p>
+                <p>akohvictor1@gmail.com</p>
               </div>
 
               <div class="phone">
