--- a/templates/education.html
+++ b/templates/education.html
@@ -11,8 +11,8 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="education-item">
-              <h4>Bachelor in Computer Science</h4>
-              <h5>2017 - (in view)</h5>
+              <h4>Bachelor of Science, Computer Science</h4>
+              <h5>2017 - 2022</h5>
               <p><em>Federal University Lokoja, Kogi State</em></p>
               <p> I got my bachelor of centers</p>
             </div>
