--- a/templates/experience.html
+++ b/templates/experience.html
@@ -11,19 +11,28 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="experience-item">
-                    <h4>Computer Training Coordinator</h4>
-                    <h5>2015 - 2017</h5>
-                    <p><em>Onlygod Computer Training Institute, Jos </em></p>
+                    <h4>Tech Lead/Team Lead, Full Stack Developer</h4>
+                    <h5>2022</h5>
+                    <p><em>Federal University Lokoja Lokoja, Nigeria</em></p>
                     <ul>
-                        <li>Carryout various business center works.</li>
-                        <li>Taught as a computer instructor.</li>
-                        <li>Worked in the Cafe</li>
+                        <li>Managed and contributed to the development of the school departmental website.</li>
+                        <li>Collaborated and Developed the Frontend and Backend</li>
                     </ul>
                 </div>
                 <div class="experience-item">
-                    <h4>Management System Development Project</h4>
+                    <h4>Full Stack Developer Intern</h4>
+                    <h5>2021</h5>
+                    <p><em>HNG Lagos, Nigeria</em></p>
+                    <ul>
+                        <li>Developed noticeboard and holiday calender applications using Django, Javascript and React.</li>
+                        <li>Collaborated with in-house web designers to create sleek and innovative UI design.</li>
+                        <li>Built a plugin for the project.</li>
+                    </ul>
+                </div> 
+                <div class="experience-item">
+                    <h4>Software Developer Team Lead</h4>
                     <h5>2019</h5>
-                    <p><em>Lokoja Nigeria</em></p>
+                    <p><em>Federal University Lokoja Lokoja, Nigeria</em></p>
                     <ul>
                         <li>Developed System Management Project using Java.</li>
                         <li>Managed up to 7 projects or tasks at a given time while under pressure</li>
