--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,10 @@
 {% load static %}
 
 <footer id="footer">
-        <div class="container">
-            <div class="container d-flex justify-content-around align-content-center">
-                <div class="row">
+    <div class="container">
+        <!--<div class="container d-flex justify-content-around align-content-center">
+            
+            <div class="row">
                     <div class="col">
                         <a href="https://hng.tech/" target="_blank"><img src="{% static 'img/hnglogo.png' %}" alt="HNG Logo"  class="img-fluid" /></a>
                     </div>
@@ -13,9 +14,9 @@
                     <div class="col">
                         <a href="https://ingressive.org/" target="_blank"><img src="{% static 'img/i4glogo.png' %}" alt="Ingressive4Good Logo"  class="img-fluid" /></a>
                     </div>
-                </div>
-            </div>           
-            <p>Living is Learning and Learning is Living!</p>
+            </div>
+        </div>   -->        
+        <p>Living is Learning and Learning is Living!</p>
         <div class="social-links">
             <a href="https://www.twitter.com/akohvictor1" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="https://www.facebook.com/VictoriousIncredibleChamp" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -23,7 +24,7 @@
             <a href="https://github.com/Vicolas11/Resume" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         </div>
         <div class="copyright">
-            &copy; Copyright <span>2021</span>
+            &copy; Copyright <span>2022</span>
         </div>
-        </div>
+    </div>
 </footer>
