--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="d-flex flex-column justify-content-center border border-bottom-3">
         <div id="hero" class="container border-bottom-0" data-aos="zoom-in" data-aos-delay="100">
             <h1 class="text-center">Vicolas Akoh</h1>
-            <p class="text-center">Backend Web developer | Data Scientist</p>
+            <p class="text-center">Full-Stack Web developer | Data Scientist</p>
         </div>
     </div>
     <!-- End Hero -->
