--- a/templates/education.html
+++ b/templates/education.html
@@ -14,7 +14,7 @@
               <h4>Bachelor of Science, Computer Science</h4>
               <h5>2017 - 2022</h5>
               <p><em>Federal University Lokoja, Kogi State</em></p>
-              <p> I got my bachelor of centers</p>
+              <p> I got my Bachelor of Science</p>
             </div>
             <div class="education-item">
                 <h4>Senior School Certificate</h4>
